--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    /* border: 2px solid red; */
+    /* align-items: center; */
 }
 
 .header {
@@ -16,6 +18,7 @@ body {
 .top {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 100px;
 }
 
@@ -65,4 +68,29 @@ a {
 .header-color-2 {
     color: #E5E7EB;
     font-size: 18px;
+}
+
+
+
+
+
+
+
+.info-img-1, .info-img-2, .info-img-3, .info-img-4 {
+    max-width: 200px;
+}
+
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+}
+
+.wrapper {
+    display: flex;
+    flex: 1;
 }
